@@ -30,6 +30,8 @@ let selection = npc.askYesNo("#b(I can see something covered in grass. Should I 
 if (selection == 0) {
 	npc.sayNext("#b(I didn't think much of it, so I didn't touch it.)");
 } else {
-	player.gainItem(4031922, 1);
-	npc.sayNext("#b(Yuck... it's pet poop!)");
+	if (player.gainItem(4031922, 1))
+		npc.sayNext("#b(Yuck... it's pet poop!)");
+	else //TODO: GMS-like line
+		npc.say("Please check whether your ETC. inventory is full.");
 }
